@@ -66,6 +66,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7970: email.Generator.flatten now correctly flattens message/rfc822
+  messages parsed by email.Parser.HeaderParser.
+
 - Issue #3426: ``os.path.abspath`` now returns unicode when its arg is unicode.
 
 - Issue #7835: shelve should no longer produce mysterious warnings during
